# resume

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DEPLOY_DOCKER_LINUX.md  Dockerfile  FONT_PACKAGING.md  FRONTEND_VUE_REFACTOR_PLAN.md  JOB_SEARCH_MANAGEMENT_PRODUCT.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  start.bat  update-and-deploy.sh  投递管理.md
app/: main.py
app/api/routes/: auth.py  resumes.py  uploads.py
app/core/: config.py  logging.py  security.py
app/db/: bootstrap.py
app/html_templates/pro_resume/: resume.html.j2
app/latex_templates/neu_resume/: resume_template.tex.j2
app/latex_templates/pro_resume/: resume.cls  resume_template.tex.j2
app/models/: __init__.py  auth_verification.py  resume.py  user.py
app/schemas/: auth.py  resume.py
app/services/: auth_verification.py  html_pdf.py  latex.py  minio_storage.py  templates.py
app/static/: app.js  index.html  styles.css
backend/: Dockerfile
backend/app/: main.py
backend/app/db/: bootstrap.py
backend/app/models/: __init__.py  application.py  interview.py  resume.py
backend/app/schemas/: application.py  auth.py  interview.py  resume.py
deploy/nginx/: default.conf
frontend/: THIRD_PARTY_NOTICES.md  app.js  editor.html  editor.js  index.html  login.html  login.js  package-lock.json  package.json  styles.css  tailwind.config.js
frontend-vue/: index.html  package.json  vite.config.js
frontend-vue/src/: styles.css
frontend/src/: App.vue  main.js  styles.css
resume_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+58 files in other folders)
