[project]
name = "resume-backend"
version = "0.1.0"
description = "Online HTML resume system backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "minio>=7.2.20,<8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
